Collapsible menus -- dark mode fixes

--- a/public/css/components/nav/sidebar.css
+++ b/public/css/components/nav/sidebar.css
@@ -79,7 +79,7 @@
         .c-nav-collapse-expand--mobile {
             left: 1rem;
             right: unset;
-            background: radial-gradient(circle at center, white 0%, transparent 100%);
+            background: radial-gradient(circle at center, var(--color-body-background) 0%, transparent 100%);
         }
         /* GROUP COMPONENTS / NAV DROPDOWN WITH POPOVER API AND ANCHOR POSITIONING / NAV STYLING
         =================================================== */
@@ -320,6 +320,9 @@
             .dash {
                 display: none;
             }
+        }
+        @container style(--color-scheme: dark) {
+            opacity: 0.5;
         }
     }
 }
